src/main/java/com/example/test/error/exception/DuplicateException.java
package com.example.test.error.exception;

import com.example.test.error.ErrorCode;

public class DuplicateException extends BusinessException {

    public DuplicateException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}